Bug 1236399 - Text carousel in app preview's area when app name is too long

--- a/src/media/css/app-preview.styl
+++ b/src/media/css/app-preview.styl
@@ -77,7 +77,7 @@ $app-preview-background-color = #72C9B0;
     .detail {
         position: relative;
 
-        width: 74rem;
+        width: 89rem;
         padding-top: 1rem;
 
         color: $greyscale-white;
